# Rick-Morty-Python-Client

./: Query_character  TODO.md  pyproject.toml
rick_morty_client/: __init__.py  client.py  constants.py  utils.py
