[tool.poetry]
name = "rick_morty_client"
version = "0.1.0"
description = ""
authors = ["tnshaikh00 <103294764+tnshaikh00@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rick_morty_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


